Adjusted format and added new different spanish phrases

--- a/web.html
+++ b/web.html
@@ -9,10 +9,12 @@
             <ul>
             <a href="web.html">Home</a>
             <a href="about.html">About</a>
-            <a href="prices.html">Support</a>
+            <a href="prices.html">Learn with Music</a>
             </ul>
 
         </div>
+        <br>
+        <br>
 <div id="LOGO">
     <img  src="imgs/Learning Spanish.png" alt="Learn Spanish LOGO">
 </div>
@@ -61,10 +63,10 @@
                 Goodbye
             </td>
             <td>
-                Adios
+                Adiós
             </td>
             <td>
-                "Adios"
+                "Adiós"
             </td>
         </tr>
                 <tr>
@@ -83,10 +85,10 @@
                 How are you?
             </td>
             <td>
-                Como estas?
+                ¿Cómo estás?
             </td>
             <td>
-                "Como estas?"
+                "¿Cómo estás?"
             </td>
         </tr>
                 <tr>
@@ -102,61 +104,62 @@
         </tr>
                 <tr>
             <td>
-                Hello
+                Good morning
             </td>
             <td>
-                Hola
+                Buenos días
             </td>
             <td>
-                "Hola"
-            </td>
-        </tr>
-                <tr>
-            <td>
-                Hello
-            </td>
-            <td>
-                Hola
-            </td>
-            <td>
-                "Hola"
+                "Buenos días"
             </td>
         </tr>
                 <tr>
             <td>
-                Hello
+                Good Afternoon
             </td>
             <td>
-                Hola
+                Buenas tardes
             </td>
             <td>
-                "Hola"
-            </td>
-        </tr>
-                <tr>
-            <td>
-                Hello
-            </td>
-            <td>
-                Hola
-            </td>
-            <td>
-                "Hola"
+                "Buenas tardes"
             </td>
         </tr>
                 <tr>
+
+        </tr>
+                <tr>
             <td>
-                Hello
+                Good night
             </td>
             <td>
-                Hola
+                Buenos noches
             </td>
             <td>
-                "Hola"
+                "Buenos noches"
+            </td>
+
+
+        </tr>
+                <tr>
+            <td>
+                My name is ___
+            </td>
+            <td>
+                Mi nombre es ___
+            </td>
+            <td>
+                "Mi nombre es ___"
             </td>
         </tr>
     </table>
-    
+    <br>
+    <br>
+    <br>
+    <div id="center">
+    <button id="Quiz">Ready for quiz?</button>
+    </div>
+    <br>
+    <br>
 
 </body>
 
