Added audio files and adding flashcard functions

--- a/web.html
+++ b/web.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Summer Project!</title>
+<title> Spanish Project!</title>
 <link rel="stylesheet" href="web.css">
 </head>
 <body>
         <div class="navbar">
             <ul>
             <a href="web.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="flashcards.html">Flashcards</a>
             <a href="prices.html">Learn with Music</a>
             </ul>
 
@@ -18,19 +18,19 @@
 <div id="LOGO">
     <img  src="imgs/Learning Spanish.png" alt="Learn Spanish LOGO">
 </div>
-    <h3>
+    <p>
         Hello my name is Alejandro Welcome to my page!
-    </h3>
+    </p>
     <br>
     <br>
     <br>
 
     <!--the bottom is the just learning simple spanish -->
 
-    <h3>The following in the bottom will be basic Spanish phrases, please try practicing the following at the pase you want. After you learn the following 
+    <p>The following in the bottom will be basic Spanish phrases, please try practicing the following at the pase you want. After you learn the following 
         phrases you will take a short quiz and we'll determine if you can learn new ones!!! (no pressure on when to take the quiz however to move forward its required to get a 
         good score on it)
-    </h3>
+    </p>
 
     <br>
     <br>
@@ -42,9 +42,9 @@
     <table style="width: 100%; height: auto;">
         <tr>
             <th>
-                Spanish Phrase
+                English Phrases
             </th>
-            <th>English Phrase</th>
+            <th>Spanish Phrases</th>
             <th>Audio</th>
         </tr>
         <tr>
@@ -54,9 +54,12 @@
             <td>
                 Hola
             </td>
-            <td>
-                "Hola"
-            </td>
+ <td>
+  <audio controls>
+    <source src="Spanish-audio/Hola.m4a" audio/mp4">
+  </audio>
+</td>
+
         </tr>
                 <tr>
             <td>
@@ -66,7 +69,9 @@
                 Adiós
             </td>
             <td>
-                "Adiós"
+  <audio controls>
+    <source src="Spanish-audio/Adiós.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -77,7 +82,9 @@
                 Gracias
             </td>
             <td>
-                "Gracias"
+  <audio controls>
+    <source src="Spanish-audio/Gracias.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -88,7 +95,9 @@
                 ¿Cómo estás?
             </td>
             <td>
-                "¿Cómo estás?"
+  <audio controls>
+    <source src="Spanish-audio/Cómo estás.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -99,7 +108,9 @@
                 Estoy bien
             </td>
             <td>
-                "Estoy bien"
+  <audio controls>
+    <source src="Spanish-audio/Estoy bien.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -110,7 +121,9 @@
                 Buenos días
             </td>
             <td>
-                "Buenos días"
+  <audio controls>
+    <source src="Spanish-audio/Buenos días.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -121,7 +134,9 @@
                 Buenas tardes
             </td>
             <td>
-                "Buenas tardes"
+                  <audio controls>
+    <source src="Spanish-audio/Buenas tardes.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
                 <tr>
@@ -135,7 +150,9 @@
                 Buenos noches
             </td>
             <td>
-                "Buenos noches"
+                  <audio controls>
+    <source src="Spanish-audio/Buenos noches.m4a" audio/mp4">
+  </audio>
             </td>
 
 
@@ -148,7 +165,9 @@
                 Mi nombre es ___
             </td>
             <td>
-                "Mi nombre es ___"
+                 <audio controls>
+    <source src="Spanish-audio/Mi nombre es ___.m4a" audio/mp4">
+  </audio>
             </td>
         </tr>
     </table>
